Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.1.2 - 7/03/2011 - Aaron Edwards
----------------------------------------------------------------------
- WP 3.2 compatibility
- Ability to add define('MP_HIDE_LOGIN_OPTION', true); to hide the login option on checkout
- Fixed redirect bug for login link on checkout
- Many new hooks for WPML full translation capability
- Ability to add add_theme_support('mp_style') to disable frontend css
- Fixed Kenyan Shilling symbol
- Added hooks to the download handler to allow plugins to override
- Fixed bug in drop down menus

2.1.1 - 6/03/2011 - Aaron Edwards
----------------------------------------------------------------------
- Changes to the download script to enable larger files
- Ability to add define('MP_LARGE_DOWNLOADS', true); to wp-config.php to use redirects for very large files
- Some improvements to the WP e-Commerce product importer for old thumbnails

2.1 - 5/25/2011 - Aaron Edwards
----------------------------------------------------------------------
- WP e-Commerce product importer added
- New importer plugin class added for others to easily build importers
- Fix rare bug with permalinks
- Try to prevent other plugins that cache output from stopping downloads

2.0.6 - 5/20/2011 - Aaron Edwards
----------------------------------------------------------------------
- Add configurable store admin email address
- Filter email from and name for store emails
- Add buyer email to order admin notification
- Remove digital flag in PayPal express gateway
- Fix out of order </tbody> tag on cart page
- Remove PHP5 depreciated class assignments

2.0.5 - 5/12/2011 - Aaron Edwards
----------------------------------------------------------------------